cluster-cd/apps/chongus/default/blink/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name blink
spec:
  replicas: 1
  selector:
    matchLabels:
      name: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: *name
        app: *name
        app.kubernetes.io/instance: *name
        app.kubernetes.io/name: *name
        app.kubernetes.io/part-of: *name
      annotations:
        secret.reloader.stakater.com/reload: auto
    spec:
      replicas: 3
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: blink
          image: ghcr.io/janejeon/blink:v1.4.0
          ports:
            - containerPort: 5432
              name: http
              protocol: TCP
          livenessProbe: &probe
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            failureThreshold: 5
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe: *probe
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/instance
                    operator: In
                    values:
                      - *name
              topologyKey: "kubernetes.io/hostname"
