cluster-cd/apps/chongus/default/blink/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name blink
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
