cluster-cd/apps/chongus/default/blink/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/target: cho-ext.${SECRET_DOMAIN}
  labels:
    app.kubernetes.io/instance: &name blink
    app.kubernetes.io/name: *name
  name: *name
spec:
  ingressClassName: nginx-external
  rules:
    - host: &host ${SHORTLINK_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: *name
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: blink-tls
